--- a/Examples/Lecture 09/same-directory.html
+++ b/Examples/Lecture 09/same-directory.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Same Directory</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+ 	abracadabra
 </body>
 </html>
