--- a/Examples/Lecture 13/simple-selectors-after.html
+++ b/Examples/Lecture 13/simple-selectors-after.html
@@ -29,7 +29,7 @@
 	}
 
 	/* all p and h1 elements*/
-	p,h1 { 
+	p,h1 { 4
 	color: blue;
 	text-align: center;
 	}
@@ -46,6 +46,7 @@
 	kdrgnslkzfngkzdjgkjdkzfjg
 </p>
 <div>This is the main point of the entire article. So, attribute</div>
+<span id="mainPoint">id="mainPoint".</span>
 <span id="mainPoint">id="mainPoint".</span>
 </body>
 </html>
