--- a/Examples/Lecture 14/trial.html
+++ b/Examples/Lecture 14/trial.html
@@ -4,33 +4,10 @@
 <head>
 <meta charset="utf-8">
 <title>Child Selector</title>
-<style>
-
-/* any article element which is a direct child of a section element,i.e., any article element whose immediate parent is a section element. */
-section > article {
-  color: green;
-  font-size: 24px;
-}
-
-/* any h2 element which is a direct child of a section element,i.e., any h2 element whose immediate parent is a section element. */
-section > h2 {
-  color: green;
-}
-
-</style>
 </head>
 <body>
-<h1>Child Selector</h1>
-<section>
-  <h2>Subheading 1</h2>
-  <div>
-    <article>ARTICLE which inside DIV, which is inside SECTION</article>
-  </div>
-</section>
-<section>
-  <article>ARTICLE as a direct child of the SECTION element.</article>
-</section>
-<h2>Subheading 2</h2>
+<span>sdfj sdfkjnsf sddkfjnfmn sfkndfn sfkjnsdfm sdfjnsmf ksenfmsd fksjefnmsd kjenfms fskfmn nf kdfmmsdnf sdkf fkndf sdmf kdfnd fkjdfsd fsndfksdfmn fksfns dfns dfsdkdfkjznd xvzkjfn zdkfjn kdjf glkdjfn zkdjfn lzjf gkjfng zkxfnv zkjxfn zkfjnv zkjfxnv zdjfn zkjdfn kzjfng kzjdjfxn kjzdfng kzjnfx gkjznfx kgjndfk gdkjf gkjdf kgjn zdfkj nzdkjfng kjdfngkjzn fgkzjxnfgk  jznfg kjz djngkjzfx ngkxf nkznfkjg hzdkfn zf nkj fgjzfkjgnxfk jnnfn</span>
+<div>HELLO I'm Noob.kdjfnkajrf sfkjesfmn dkjnefmn sdkjfdkfg jjd fkjdh kjdhfg dfkjghdkf gakdjfg kf jkh fgkdh fgjkhdf kghd kfhgkdj fhgkjd fh gkdfhgk djfhg djjfhgi erg kjdnf vkjnfji hdkf jg kdfngir gkjnf gihrkj gnf gi uhdkfj gnekrgh  iuf hgk jehr giuhdf kje  rgiufgk jh driguh eirug kgjkjdgh em dsem kjnfem sdkjnsfm sdfkjn sdfm efknsmf skjefnmn dfkjsenfn fjsbfn ejfb nbs fjh fjdf s f fd sd  sf d g s fa sf d g s srg dfgdf g xd fg dzf gzd fg zd f g</div>
 
 </body>
 </html>
