--- a/Examples/Lecture 15/pse.html
+++ b/Examples/Lecture 15/pse.html
@@ -15,14 +15,26 @@ border: 1px solid blue;
 color: black;
 display: block;
 width: 200px;
-text-align: center;
+text-align: center; 
 margin-bottom: 1px;
     }
     a:hover, a:active {
       background-color: red;
-      color: purple;
-      
+      color: purple;  
     }
+
+    header li:nth-child(3) {
+        font-size: 24px;
+    }
+    section div:nth-child(odd) {
+      background-color: gray;
+      width: 50px;
+    }
+     section div:nth-child(4):hover {
+      background-color: green;
+      cursor: pointer;
+      width: 50px;
+     }
 	</style>
 </head>
 <body>
